public interface LaundryMachine {

    void chooseProgram ();

    void displayPriceAndDuration ();

    void start ();

    void addExtra ();
}

