import java.util.ArrayList;

public class LaundryService {
    private ArrayList<LaundryMachine> machines;

    public LaundryService () {
        this.machines = new ArrayList<>();
    }


    public void addMachine (LaundryMachine laundryMachine) {

    }

    public LaundryMachine chooseMachine () {

        return null;
    }

}
