@startuml
'https://plantuml.com/class-diagram

class Main {
+ static void Main (String [] args)
}

class LaundryService {
- ArrayList <LaundryMachine> machines

+ void laundryService ()
+ void addMachine (LaundryMachine)
+ laundryMachine chooseMachine ()
}

interface LaundryMachine {
+ void chooseProgram ()
+ void displayPriceAndDuration ()
+ void start ()
+ void addExtra
}

class WashingMachine {
- int duration
- double price
- boolean isRunning
- int capacity

+ WashingMachine (int capacity)
}

class Dryer {
- int duration
- double price

+ Dryer ()

}

Main *-- LaundryService
LaundryService *-- LaundryMachine
LaundryMachine <|-- WashingMachine
LaundryMachine <|-- Dryer

@enduml